# protobuf

./: WORKSPACE  protobuf_version.bzl
compatibility/: BUILD.bazel
compatibility/breaking/: test.bzl  toolchain.bzl
src/google/protobuf/: BUILD.bazel
src/google/protobuf/breaking/: BUILD.bazel  breaking_image.bzl
